--- a/index.html
+++ b/index.html
@@ -18,24 +18,25 @@
     </section>
 
     <main class="main-bc">
+        
         <section id="content" class="content main-layout">
+
             <section class="generator">
                 <div class="canvas-container">
                     <canvas id="canvas" height="400" width="400"></canvas>
                 </div>
                 <div class="tools-container">
-
+                    <input class="txt-input" type="text" placeholder="Enter meme text here">
                 </div>
             </section>
-            <section class="gallery" hidden>
 
-            </section>
-            <section class="about" hidden>
+            <section class="gallery" hidden> </section>
+            <section class="about" hidden> </section>
 
-            </section>
         </section>
     </main>
 
+    <script src="js/services/gallery-service.js"></script>
     <script src="js/services/canvas-service.js"></script>
     <script src="js/services/meme-service.js"></script>
     <script src="js/controller.js"></script>
