--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
             </section>
 
-            <section class="gallery" hidden> </section>
-            <section class="about" hidden> </section>
+            <section class="gallery"> </section>
 
         </section>
     </main>
