fixed clicking imgs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section class="nav-bar-bc">
         <nav class="nav-bar main-layout">
-            Navbar
+            <a href="index.html">Home</a>
         </nav>
     </section>
 
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="tools-container">
-                    <input type="text" id="enter-text" class="txt-input" name="text"
+                    <input type="text" id="txt-input" class="txt-input" name="text"
                         placeholder="Enter new text" oninput="onInput(this.value)">
                 </div>
 
