--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         </section>
     </main>
-
+    <script src="js/services/storage-service.js"></script>
     <script src="js/services/meme-service.js"></script>
     <script src="js/meme-controller.js"></script>
     <script src="js/index-controller.js"></script>
