--- a/index.html
+++ b/index.html
@@ -34,15 +34,43 @@
                 </div>
 
                 <div class="tools-container">
-                    <div class="tools-grid">
+                    <div class="control-box">
+                        <!-- LINE 1 -->
                         <input type="text" id="txt-input" class="txt-input" name="text" placeholder="Enter new text"
                             oninput="onInput(this.value)">
-                        <button class="tool-btn" onclick="onMoveLine(-10)">👆</button>
-                        <button class="tool-btn" onclick="onMoveLine(10)">👇</button>
-                        <img src="design/ICONS/switch-lines.png" class="tool-btn" onclick="onSwitchLines()" />
-                        <img src="design/ICONS/font-plus.png" class="tool-btn" onclick="onSetFontsize(5)" />
-                        <img src="design/ICONS/decrease-font.png" class="tool-btn" onclick="onSetFontsize(-5)" />
+                        <!-- LINE 2 -->
+                        <button class="tool-btn line-up" onclick="onMoveLine(-10)">👆</button>
+                        <button class="tool-btn line-down" onclick="onMoveLine(10)">👇</button>
+                        <img src="design/ICONS/switch-lines.png" class="tool-btn switch-lines" onclick="onSwitchLines()" />
+                        <img src="design/ICONS/add.png" class="tool-btn add-line" onclick="onAddLine()" />
+                        <img src="design/ICONS/delete.png" class="tool-btn delete-line" onclick="onDeleteLine()" />
+                        <!-- LINE 3 -->
+                        <img src="design/ICONS/font-plus.png" class="tool-btn add-size" onclick="onSetFontsize(5)" />
+                        <img src="design/ICONS/decrease-font.png" class="tool-btn decrease-size" onclick="onSetFontsize(-5)" />
+                        <img src="design/ICONS/align-left.png" class="tool-btn align-right" onclick="onSetAlign('right')" />
+                        <img src="design/ICONS/align-center.png" class="tool-btn align-center" onclick="onSetAlign('center')" />
+                        <img src="design/ICONS/align-right.png" class="tool-btn align-left" onclick="onSetAlign('left')" />
+                        <!-- LINE 4 -->
+                        <select name="fonts" class="fonts-input" onchange="onSetFont(this.value)">
+                        <option value="impact">Impact</option>
+                        <option value="Arial">Arial</option>
+                        <option value="Georgia">Georgia</option>
+                        <option value="Verdana">Verdana</option>
+                        <option value="sans-serif">Sans-serif</option>
+                        <option value="serif">Serif</option>
+                        <option value="Cursive">Cursive</option>
+                        </select>
+                        <label for="font-stroke" class="custom-stroke-txt">
+                            <img src="design/ICONS/text-stroke.png" class="tool-btn text-stroke">
+                        </label>
+                        <label for="font-fill" class="custom-txt-color">
+                            <img src="design/ICONS/text-fill.png" class="tool-btn text-fill">
+                        </label>
                     </div>
+                    <input class="color-input" type="color"  id="font-stroke"
+                        value="#000000" onchange="onSetColor('stroke',this.value)">
+                    <input class="color-input" type="color" id="font-fill" 
+                        value="#ffffff" onchange="onSetColor('color',this.value)">
                 </div>
 
             </section>
@@ -51,7 +79,6 @@
             <section class="about">
                 <div class="about-me">
                     <p>This was created by Zohar Haruv as the second project in Coding Academy Fullstack course!</p>
-
                 </div>
                 <div class="about-links">
                     <a href="https://github.com/zoharharuv/"><img src="design/ICONS/github-logo.png" alt="github" /></a>
@@ -67,7 +94,7 @@
     <script src="js/services/storage-service.js"></script>
     <script src="js/services/meme-service.js"></script>
     <script src="js/meme-controller.js"></script>
-    <script src="js/index-controller.js"></script>
+    <script src="js/misc.js"></script>
 </body>
 
 <footer class="footer-bc">
