--- a/index.html
+++ b/index.html
@@ -31,29 +31,31 @@
         <section id="content" class="content main-layout">
 
             <section class="search flex hidden">
-                <input type="search" id="search-bar" placeholder="Filter by word" oninput="onSearchWord(this.value)">
+                <input type="search" id="search-bar" placeholder="Filter by word" oninput="onSearchWord(this.value, this)">
 
                 <ul class="words-list clean-list flex">
-                    <li class="search-word funny" onclick="onSearchWord('funny')">funny</li>
-                    <li class="search-word happy" onclick="onSearchWord('happy')">happy</li>
-                    <li class="search-word love" onclick="onSearchWord('love')">love</li>
-                    <li class="search-word nice" onclick="onSearchWord('nice')">nice</li>
+                    <li class="search-word funny" onclick="onSearchWord('funny', this)">funny</li>
+                    <li class="search-word happy" onclick="onSearchWord('happy', this)">happy</li>
+                    <li class="search-word love" onclick="onSearchWord('love', this)">love</li>
+                    <li class="search-word nice" onclick="onSearchWord('nice', this)">nice</li>
                 </ul>
-                
+
                 <div class="all-words-box hidden">
                     <ul class="words-list clean-list flex ">
-                        <li class="search-word cool" onclick="onSearchWord('cool')">cool</li>
-                        <li class="search-word angry" onclick="onSearchWord('angry')">angry</li>
-                        <li class="search-word sad" onclick="onSearchWord('sad')">sad</li>
-                        <li class="search-word baby" onclick="onSearchWord('baby')">baby</li>
-                        <li class="search-word cats" onclick="onSearchWord('cats')">cats</li>
-                        <li class="search-word dogs" onclick="onSearchWord('dogs')">dogs</li>
+                        <li class="search-word cool" onclick="onSearchWord('cool', this)">cool</li>
+                        <li class="search-word angry" onclick="onSearchWord('angry', this)">angry</li>
+                        <li class="search-word sad" onclick="onSearchWord('sad', this)">sad</li>
+                        <li class="search-word baby" onclick="onSearchWord('baby', this)">baby</li>
+                        <li class="search-word cats" onclick="onSearchWord('cats', this)">cats</li>
+                        <li class="search-word dogs" onclick="onSearchWord('dogs', this)">dogs</li>
                     </ul>
                 </div>
 
                 <span class="all-words-btn" onclick="onShowAllWords(this)">All...</span>
 
             </section>
+
+            <section class="gallery"></section>
 
             <section class="generator">
 
@@ -110,7 +112,6 @@
 
             </section>
 
-            <section class="gallery"></section>
             <section class="about">
                 <div class="about-me">
                     <p>This was created by Zohar Haruv as the second project in Coding Academy Fullstack course!</p>
@@ -136,7 +137,7 @@
     </main>
     <section class="footer-bc">
         <section class="footer-content main-layout">
-            all rights reserved 2021 © zohar haruv
+            all rights reserved 2021 zohar h
         </section>
     </section>
     <script src="js/services/storage-service.js"></script>
