--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <section id="content" class="content main-layout">
 
             <section class="search flex hidden">
-                <input type="search" id="search-bar" placeholder="Filter by word" oninput="onSearchWord(this.value, this)">
+                <input type="search" id="search-bar" placeholder="Filter by word"
+                    oninput="onSearchWord(this.value)">
 
                 <ul class="words-list clean-list flex">
                     <li class="search-word funny" onclick="onSearchWord('funny', this)">funny</li>
@@ -51,7 +52,7 @@
                     </ul>
                 </div>
 
-                <span class="all-words-btn" onclick="onShowAllWords(this)">All...</span>
+                <span class="all-words-btn" onclick="onShowAllWords(this)">All..</span>
 
             </section>
 
