--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </nav>
     </header>
 
-    <main class="main-bc">
+    <main class="main-container">
 
         <section id="content" class="content main-layout">
 
             <section class="search flex hidden">
-                <input type="search" id="search-bar" placeholder="Filter by word &#128269;"
+                <input type="search" id="search-bar" placeholder="Filter by word"
                     oninput="onSearchWord(this.value)">
 
                 <ul class="words-list clean-list flex">
@@ -58,64 +58,67 @@
 
 
             <section class="gallery"></section>
-
-            <section class="generator">
+            <section class="meme-gen">
                 <div class="upload-img">
                     <h2>Upload a photo</h2>
                     <input type="file" class="file-input btn" name="image" onchange="onImgInput(event)" />
                 </div>
-                <div class="canvas-container">
-                    <canvas id="canvas" height="500" width="500"></canvas>
-                </div>
-
-                <div class="tools-container">
-                    <div class="control-box">
-                        <!-- LINE 1 -->
-                        <input type="text" id="txt-input" class="txt-input" name="text" placeholder="Enter new text"
-                            oninput="onInput(this.value)" autocomplete="off">
-                        <!-- LINE 2 -->
-                        <button class="tool-btn line-up" onclick="onMoveLine(-10)">👆</button>
-                        <button class="tool-btn line-down" onclick="onMoveLine(10)">👇</button>
-                        <img src="design/ICONS/switch-lines.png" class="tool-btn switch-lines"
-                            onclick="onSwitchLines()" />
-                        <img src="design/ICONS/add.png" class="tool-btn add-line" onclick="onAddLine()" />
-                        <img src="design/ICONS/delete.png" class="tool-btn delete-line" onclick="onDeleteLine()" />
-                        <!-- LINE 3 -->
-                        <img src="design/ICONS/font-plus.png" class="tool-btn add-size" onclick="onSetFontsize(5)" />
-                        <img src="design/ICONS/decrease-font.png" class="tool-btn decrease-size"
-                            onclick="onSetFontsize(-5)" />
-                        <img src="design/ICONS/align-left.png" class="tool-btn align-right"
-                            onclick="onSetAlign('right')" />
-                        <img src="design/ICONS/align-center.png" class="tool-btn align-center"
-                            onclick="onSetAlign('center')" />
-                        <img src="design/ICONS/align-right.png" class="tool-btn align-left"
-                            onclick="onSetAlign('left')" />
-                        <!-- LINE 4 -->
-                        <select name="fonts" class="fonts-input" onchange="onSetFont(this.value)">
-                            <option value="impact">Impact</option>
-                            <option value="Arial">Arial</option>
-                            <option value="Georgia">Georgia</option>
-                            <option value="Verdana">Verdana</option>
-                            <option value="sans-serif">Sans-serif</option>
-                            <option value="serif">Serif</option>
-                            <option value="Cursive">Cursive</option>
-                        </select>
-                        <label for="font-stroke" class="custom-stroke-txt">
-                            <img src="design/ICONS/text-stroke.png" class="tool-btn text-stroke">
-                        </label>
-                        <label for="font-fill" class="custom-txt-color">
-                            <img src="design/ICONS/text-fill.png" class="tool-btn text-fill">
-                        </label>
-                        <!-- LINE 5 -->
-                        <button class="tool-btn publish-btn" onclick="openModal()">Publish</button>
+                <section class="generator">
+                    <div class="canvas-container">
+                        <canvas id="canvas" height="550" width="550"></canvas>
                     </div>
-                    <input class="color-input" type="color" id="font-stroke" value="#000000"
-                        onchange="onSetColor('stroke',this.value)">
-                    <input class="color-input" type="color" id="font-fill" value="#ffffff"
-                        onchange="onSetColor('color',this.value)">
-                </div>
 
+                    <div class="tools-container">
+                        <div class="control-box">
+                            <!-- LINE 1 -->
+                            <input type="text" id="txt-input" class="txt-input" name="text" placeholder="Enter new text"
+                                oninput="onInput(this.value)" autocomplete="off">
+                            <!-- LINE 2 -->
+                            <button class="tool-btn line-up" onclick="onMoveLine(-10)">👆</button>
+                            <button class="tool-btn line-down" onclick="onMoveLine(10)">👇</button>
+                            <img src="design/ICONS/switch-lines.png" class="tool-btn switch-lines"
+                                onclick="onSwitchLines()" />
+                            <img src="design/ICONS/add.png" class="tool-btn add-line" onclick="onAddLine()" />
+                            <img src="design/ICONS/delete.png" class="tool-btn delete-line" onclick="onDeleteLine()" />
+                            <!-- LINE 3 -->
+                            <img src="design/ICONS/font-plus.png" class="tool-btn add-size"
+                                onclick="onSetFontsize(5)" />
+                            <img src="design/ICONS/decrease-font.png" class="tool-btn decrease-size"
+                                onclick="onSetFontsize(-5)" />
+                            <img src="design/ICONS/align-left.png" class="tool-btn align-right"
+                                onclick="onSetAlign('right')" />
+                            <img src="design/ICONS/align-center.png" class="tool-btn align-center"
+                                onclick="onSetAlign('center')" />
+                            <img src="design/ICONS/align-right.png" class="tool-btn align-left"
+                                onclick="onSetAlign('left')" />
+                            <!-- LINE 4 -->
+                            <select name="fonts" class="fonts-input" onchange="onSetFont(this.value)">
+                                <option value="impact">Impact</option>
+                                <option value="Arial">Arial</option>
+                                <option value="Georgia">Georgia</option>
+                                <option value="Verdana">Verdana</option>
+                                <option value="sans-serif">Sans-serif</option>
+                                <option value="serif">Serif</option>
+                                <option value="Cursive">Cursive</option>
+                            </select>
+                            <label for="font-stroke" class="custom-stroke-txt">
+                                <img src="design/ICONS/text-stroke.png" class="tool-btn text-stroke">
+                            </label>
+                            <label for="font-fill" class="custom-txt-color">
+                                <img src="design/ICONS/text-fill.png" class="tool-btn text-fill">
+                            </label>
+                            <!-- LINE 5 -->
+                            <button class="tool-btn publish-btn" onclick="openModal()">Publish</button>
+                        </div>
+                        <input class="color-input" type="color" id="font-stroke" value="#000000"
+                            onchange="onSetColor('stroke',this.value)">
+                        <input class="color-input" type="color" id="font-fill" value="#ffffff"
+                            onchange="onSetColor('color',this.value)">
+                    </div>
+
+                </section>
             </section>
+
 
             <section class="about">
                 <div class="about-me">
@@ -141,11 +144,13 @@
             <button class="close-modal" onclick="closeModal()">x</button>
         </aside>
     </main>
+
     <section class="footer-bc">
         <section class="footer-content main-layout">
             all rights reserved 2021 zohar h
         </section>
     </section>
+    
     <script src="js/services/storage-service.js"></script>
     <script src="js/services/meme-service.js"></script>
     <script src="js/services/upload-service.js"></script>
