added web share api

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </section>
         </section>
         <aside class="modal hidden">
-            <button class="facebook-modal" onclick="onUpload('facebook')">Share on Facebook</button>
+            <button class="facebook-modal" onclick="onUpload('facebook')">Share</button>
             <button class="upload-modal" onclick="onUpload('upload')">Upload</button>
             <button class="download-modal"><a href="#" onclick="onDownload(this)" download="MyMeme.jpg">Download
                 </a></button>
