https + css fixing

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <section class="about">
                 <div class="about-me">
-                    <p>This was created by Zohar Haruv as the second project in Coding Academy Fullstack course!</p>
+                    <h3>This was created by Zohar Haruv as the second project in Coding Academy Fullstack course!</h3>
                 </div>
                 <div class="about-links">
                     <a href="https://github.com/zoharharuv/"><img src="design/ICONS/github-logo.png" alt="github" /></a>
